@@ -4,7 +4,6 @@
   <artifactId>Lauditor</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
-
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
@@ -89,14 +88,6 @@
         <version>3.11.0</version>
         <configuration>
 			<fork>true</fork>
-    <compilerArgs>
-      <arg>--add-opens</arg>
-      <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-      <arg>--add-exports</arg>
-      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-      <arg>--add-exports</arg>
-      <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-    </compilerArgs>
     <release>17</release>
           <source>17</source>
           <target>17</target>
